syntax = "proto3";

package mtx;

option go_package = "github.com/joseluis8906/project-layout/internal/mtx/pb";

service HelloService {
    rpc World(HelloWorldRequest) returns (HelloWorldResponse);
}

message HelloWorldRequest {
    string msg = 1;
}

message HelloWorldResponse {
    string msg = 1;
}
