syntax = "proto3";

package mtx;

option go_package = "github.com/joseluis8906/project-layout/internal/mtx/pb";

service AccountService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc PutMoney(PutMoneyRequest) returns (PutMoneyResponse);
    rpc SendMoney(SendMoneyRequest) returns (SendMoneyResponse);
    rpc Withdraw(WithdrawRequest) returns (WithdrawResponse);
    rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse);
}

message RegisterRequest {
    message Owner {
        string id = 1;    
        string email = 2;
        string full_name = 3;
    }
    string phone_number = 1;
    Owner owner = 2;
}

message RegisterResponse {}

message PutMoneyRequest {}

message PutMoneyResponse {}

message SendMoneyRequest {}

message SendMoneyResponse {}

message WithdrawRequest {}

message WithdrawResponse {}

message GetBalanceRequest {}

message GetBalanceResponse {}
